Bithday App First Commit

--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,58 @@
-.App {
-  text-align: center;
+.container {
+  width: 30vw;
+  margin: 10px 0;
+  align-items: center;
+  background-color: var(--white);
+  border-radius: 0.25rem;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.container h2 {
+  padding: 20px;
+  background-color: var(--white);
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+main {
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  height: 100%;
 }
 
-.App-link {
-  color: #61dafb;
+/* List Component */
+.article-container {
+  display: grid;
+  background-color: var(--white);
+  grid-template-columns: auto 1fr;
+  column-gap: 0.75rem;
+  margin-bottom: 1.5rem;
+  align-items: center;
+  padding-left: 20px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.article-container img {
+  width: 75px;
+  height: 75px;
+  object-fit: cover;
+  border-radius: 50%;
+}
+
+.article-container div,
+p,
+h4 {
+  background-color: var(--white);
+}
+
+.container button {
+  width: 80%;
+  display: block;
+  background: var(--pink);
+  color: var(--white);
+  border-color: transparent;
+  margin: 2rem auto 2rem auto;
+  text-transform: capitalize;
+  font-size: 1.2rem;
+  padding: 0.5rem 0;
+  cursor: pointer;
+  letter-spacing: 0.1rem;
+  border-radius: 10px;
 }
